--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
-  <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+
+  <body class="w-100" style="height: 100%;">
+    <div
+      class="d-flex w-25 bg-success mx-auto my-3 flex-column justify-content-center align-items-center p-3 rounded"
+      id="card"
+      style="height:500px;"
+    >
+      <div class="bg-light w-75 rounded p-2" style="height: 90%;">
+        <div class="w-100 d-flex" style="height: 30%;">
+          <i class="icons"></i>
+        </div>
+
+        <div
+          class="w-100 d-flex justify-content-center align-items-center numberToShow"
+          style="height:40%;font-size: 100px;"
+        ></div>
+
+        <div
+          class="w-100 d-flex justify-content-end align-items-end"
+          style="height: 30%;"
+        >
+          <i class="icons"></i>
+        </div>
       </div>
+
+      <button id="button">CAMBIAR CARTA</button>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
